versions/26.5.0/docs/SubtaskUpdate.md
# SubtaskUpdate


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**kwargs** | **{str: (bool, date, datetime, dict, float, int, list, str, none_type)}** |  | 
**parent** | **int** |  | 
**trigger** | **str, none_type** |  | [optional] 
**name** | **str, none_type** |  | [optional] 
**noop_dont_save** | **bool** |  | [optional] 
**no_concurrency** | **bool** |  | [optional] 
**timeout** | **int, none_type** |  | [optional] 
**log_variable** | **bool** |  | [optional] 
**task** | **str, none_type** |  | [optional] 
**condition** | **str, none_type** |  | [optional] 
**sync** | **bool** |  | [optional] 
**queue** | **str, none_type** |  | [optional] 
**enqueue_at_front** | **bool** |  | [optional] 
**loop** | **bool** |  | [optional] 
**loop_expression** | **str, none_type** |  | [optional] 
**loop_variable_name** | **str, none_type** |  | [optional] 
**relative_to** | **int, none_type** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


